--- a/Students/src/main/webapp/resource/templates/departments.html
+++ b/Students/src/main/webapp/resource/templates/departments.html
@@ -1,25 +1,35 @@
 <div class="row">
 	<div class="col-sm-10  col-sm-offset-1">
-		<br> <br> <a href="#/addDepartment" class="btn btn-success"><span
-			class="glyphicon glyphicon-plus"></span> <b>Add Department</b></a>
-		<div class="table-responsive" ng-show="departments.length>0">
+
+		<br> <br> <a href="#/departments/form"
+			class="btn btn-success"><span class="glyphicon glyphicon-plus"></span>
+			<b>Add&nbsp;Department</b></a>
+
+		<div class="table-responsive">
 			<table class="table table-striped table-bordered">
 				<tr class="success">
 					<td>ID</td>
 					<td>DEPARTMENT</td>
-					<td>EDIT</td>
+					<td>MANAGE</td>
 				</tr>
-				<tr ng-repeat="department in departments track by department.id">
+				<tr data-ng-hide="departments.length">
+					<td colspan="3" class="text-center">No&nbsp;Data</td>
+				</tr>
+				<tr
+					data-ng-repeat="department in departments track by department.id">
 					<td>{{department.id}}</td>
 					<td>{{department.title}}</td>
-					<td><a href="#/findDepartment/{{department.id}}"
-						class="btn btn-danger btn-sm"> <span
-							class="glyphicon glyphicon-pencil"></span> <b>Edit</b></a> <a
-						href="#/deleteDepartment/{{department.id}}"
-						class="btn btn-primary btn-sm"> <span
-							class="glyphicon glyphicon-remove"></span> <b>Delete</b></a></td>
+					<td>
+						<button data-ng-click="findDepartmentById(department.id)">
+							<span class="glyphicon glyphicon-pencil"></span>&nbsp;Edit
+						</button>
+						<button data-ng-click="deleteDepartmentById(department.id)">
+							<span class="glyphicon glyphicon-remove"></span>&nbsp;Delete
+						</button>
+					</td>
 				</tr>
 			</table>
 		</div>
 	</div>
 </div>
+
