--- a/Students/src/main/webapp/resource/templates/studentForm.html
+++ b/Students/src/main/webapp/resource/templates/studentForm.html
@@ -1,104 +1,136 @@
 <div class="row">
-	<h3 class="text-center">Add New Student</h3>
+	<h3 class="text-center">STUDENT&nbsp;FORM</h3>
 	<br>
-	<form class="form-horizontal" name="studentForm">
+
+	<form class="form-horizontal" name="form">
+
+		<input type="hidden" data-ng-model="department.id">
+
 		<div class="form-group">
 			<label for="studentName"
-				class="control-label col-sm-2 col-sm-offset-3">Student name:
+				class="control-label col-sm-2 col-sm-offset-3">FULL&nbsp;NAME
 			</label>
 			<div class="col-sm-4">
-				<input ng-model="student.studentName" type="text"
-					class="form-control" name="studentName" ng-required="true"
-					ng-pattern="/^([a-zA-Z]+(\s)?){5,}$/" /> <span
-					ng-show="studentForm.studentName.$dirty && studentForm.studentName.$error.required"
-					class="text-danger"> Enter student name. <br></span> <span
-					ng-show="studentForm.studentName.$dirty && studentForm.studentName.$error.pattern"
-					class="text-danger"> Enter correct name. </span>
+				<input data-ng-model="student.fullName" type="text"
+					class="form-control" name="fullName" data-ng-required="true"
+					data-ng-pattern="/^[a-zA-Z]{3,}\s[a-zA-Z]{3,}(\s[a-zA-Z]{3,})?$/" />
+				<div data-ng-show="form.fullName.$dirty && form.fullName.$invalid"
+					class="text-danger">
+					<span data-ng-show="form.fullName.$error.required">Please&nbsp;enter&nbsp;a&nbsp;name</span>
+					<span data-ng-show="form.fullName.$error.pattern">This&nbsp;is&nbsp;not&nbsp;a&nbsp;valid&nbsp;name</span>
+				</div>
 			</div>
 		</div>
+
 		<div class="form-group">
 			<label for="fatherName"
-				class="control-label col-sm-2 col-sm-offset-3">Father name:
+				class="control-label col-sm-2 col-sm-offset-3">FATHER&nbsp;NAME
 			</label>
 			<div class="col-sm-4">
-				<input ng-model="student.fatherName" type="text"
-					class="form-control" name="fatherName" ng-required="true"
-					ng-pattern="/^([a-zA-Z]+(\s)?){5,}$/" /> <span
-					ng-show="studentForm.fatherName.$dirty && studentForm.fatherName.$error.required"
-					class="text-danger"> Enter father name. <br>
-				</span> <span
-					ng-show="studentForm.fatherName.$dirty && studentForm.fatherName.$error.pattern"
-					class="text-danger"> Enter correct father name. </span>
+				<input data-ng-model="student.fatherName" type="text"
+					class="form-control" name="fatherName" data-ng-required="true"
+					data-ng-pattern="/^[a-zA-Z]{3,}\s[a-zA-Z]{3,}(\s[a-zA-Z]{3,})?$/" />
+				<div
+					data-ng-show="form.fatherName.$dirty && form.fatherName.$invalid"
+					class="text-danger">
+					<span data-ng-show="form.fatherName.$error.required">Please&nbsp;enter&nbsp;a&nbsp;name</span>
+					<span data-ng-show="form.fatherName.$error.pattern">This&nbsp;is&nbsp;not&nbsp;a&nbsp;valid&nbsp;name</span>
+				</div>
 			</div>
 		</div>
+
 		<div class="form-group">
-			<label for="gender" class="control-label col-sm-2 col-sm-offset-3">Gender:
+			<label for="gender" class="control-label col-sm-2 col-sm-offset-3">GENDER
 			</label>
 			<div class="col-sm-4">
-				<select class="form-control" ng-model="student.gender" name="gender"
-					ng-required="true">
+				<select class="form-control" data-ng-model="student.gender"
+					name="gender" data-ng-required="true">
+					<option value=""></option>
 					<option value="Male">Male</option>
 					<option value="Female">Female</option>
-				</select> <span
-					ng-show="studentForm.gender.$dirty && studentForm.gender.$error.required"
-					class="text-danger"> Select gender. </span>
+				</select>
+				<div data-ng-show="form.gender.$dirty && form.gender.$invalid"
+					class="text-danger">
+					<span data-ng-show="form.gender.$error.required"
+						class="text-danger">Please&nbsp;select&nbsp;a&nbsp;genre</span>
+				</div>
 			</div>
 		</div>
+
 		<div class="form-group">
 			<label for="department"
-				class="control-label col-sm-2 col-sm-offset-3">Department: </label>
+				class="control-label col-sm-2 col-sm-offset-3">DEPARTMENT</label>
 			<div class="col-sm-4">
-				<select class="form-control" ng-model="student.department.id"
-					name="department" ng-required="true"
-					ng-options="department.id as department.title for department in departments">
+				<select class="form-control" data-ng-model="student.department.id"
+					name="department" data-ng-required="true"
+					data-ng-options="department.id as department.title for department in departments">
 				</select>
+				<div
+					data-ng-show="form.department.$dirty && form.department.$invalid"
+					class="text-danger">
+					<span data-ng-show="form.department.$error.required"
+						class="text-danger">Please&nbsp;select&nbsp;a&nbsp;department</span>
+				</div>
 			</div>
 		</div>
+
 		<div class="form-group">
 			<label for="yearOfStudy"
-				class="control-label col-sm-2 col-sm-offset-3">Year Of
-				Study: </label>
+				class="control-label col-sm-2 col-sm-offset-3">YEAR&nbsp;OF&nbsp;STUDY</label>
 			<div class="col-sm-4">
-				<input ng-model="student.yearOfStudy" type="text"
-					class="form-control" name="yearOfStudy" ng-required="true"
-					ng-pattern="/^[1-3]$/" /> <span
-					ng-show="studentForm.yearOfStudy.$dirty && studentForm.yearOfStudy.$error.required"
-					class="text-danger"> Enter year.</span> <span
-					ng-show="studentForm.yearOfStudy.$dirty && studentForm.yearOfStudy.$error.pattern"
-					class="text-danger"> Year must be between 1 and 3. </span>
+				<input data-ng-model="student.yearOfStudy" type="text"
+					class="form-control" name="yearOfStudy" data-ng-required="true"
+					data-ng-pattern="/^[1-5]$/" />
+				<div
+					data-ng-show="form.yearOfStudy.$dirty && form.yearOfStudy.$invalid"
+					class="text-danger">
+					<span data-ng-show="form.yearOfStudy.$error.required"
+						class="text-danger">Please&nbsp;enter&nbsp;a&nbsp;year&nbsp;of&nbsp;study</span>
+					<span data-ng-show="form.yearOfStudy.$error.pattern"
+						class="text-danger">The&nbsp;year&nbsp;must&nbsp;be&nbsp;between&nbsp;1&nbsp;and&nbsp;5</span>
+				</div>
 			</div>
 		</div>
+
 		<div class="form-group">
 			<label for="dateOfBirth"
-				class="control-label col-sm-2 col-sm-offset-3">Date Of
-				Birth: </label>
+				class="control-label col-sm-2 col-sm-offset-3">DATE&nbsp;OF&nbsp;BIRTH&nbsp;(dd-MM-yyyy)</label>
 			<div class="col-sm-4">
-				<input ng-model="student.dateOfBirth" type="date"
-					class="form-control" name="dateOfBirth" ng-required="true" /> <span
-					ng-show="studentForm.dateOfBirth.$dirty && studentForm.dateOfBirth.$error.date"
-					class="text-danger"> Enter date. </span>
+				<input data-ng-model="student.dateOfBirth" type="text"
+					data-ng-pattern="/^\d{2}-\d{2}-\d{4}$/" class="form-control"
+					name="dateOfBirth" data-ng-required="true" />
+				<div
+					data-ng-show="form.dateOfBirth.$dirty && form.dateOfBirth.$invalid"
+					class="text-danger">
+					<span data-ng-show="form.dateOfBirth.$error.required">Please&nbsp;enter&nbsp;a&nbsp;date</span>
+				</div>
 			</div>
 		</div>
+
 		<div class="form-group">
-			<label for="address" class="control-label col-sm-2 col-sm-offset-3">Address:
+			<label for="address" class="control-label col-sm-2 col-sm-offset-3">ADDRESS
 			</label>
 			<div class="col-sm-4">
-				<input ng-model="student.address" type="text" class="form-control"
-					name="address" ng-required="true"
-					ng-pattern="/^[a-zA-Z0-9\s\,]{10,}$/" /> <span
-					ng-show="studentForm.address.$dirty && studentForm.address.$error.required"
-					class="text-danger"> Enter address. <br>
-				</span> <span
-					ng-show="studentForm.address.$dirty && studentForm.address.$error.pattern"
-					class="text-danger"> Enter valid address. </span>
+				<input data-ng-model="student.address" type="text"
+					class="form-control" name="address" data-ng-required="true"
+					data-ng-pattern="/^[a-zA-Z0-9\s\,]{10,}$/" />
+				<div data-ng-show="form.address.$dirty && form.address.$invalid"
+					class="text-danger">
+					<span data-ng-show="form.address.$error.required">Please&nbsp;enter&nbsp;a&nbsp;address</span>
+					<span data-ng-show="form.address.$error.pattern">This&nbsp;is&nbsp;not&nbsp;a&nbsp;valid&nbsp;address</span>
+				</div>
 			</div>
 		</div>
+
 		<div class="form-group">
 			<div class="col-sm-4 col-sm-offset-5">
-				<button type="submit" class="btn btn-default"
-					ng-click="saveOrUpdateStudent(student)"
-					ng-disabled="studentForm.$invalid">Save/Update Student</button>
+				<button class="btn btn-default" data-ng-click="saveStudent(student)"
+					data-ng-disabled="form.$invalid" data-ng-hide="student.id">Save</button>
+				<button class="btn btn-default"
+					data-ng-click="updateStudent(student, student.id)"
+					data-ng-disabled="form.$invalid" data-ng-show="student.id">Update</button>
 			</div>
 		</div>
 	</form>
 </div>
+
