--- a/Students/src/main/webapp/resource/templates/students.html
+++ b/Students/src/main/webapp/resource/templates/students.html
@@ -2,8 +2,8 @@
 	<div class="col-sm-3 col-sm-offset-8">
 		<div class="input-group">
 			<input type="text" class="form-control search"
-				placeholder="Search for student" ng-model="searchText.studentName" />
-			<span class="input-group-addon"> <span
+				placeholder="Search for student" data-ng-model="studentName" /> <span
+				class="input-group-addon"> <span
 				class="glyphicon glyphicon-search"></span>
 			</span>
 		</div>
@@ -13,44 +13,50 @@
 
 <div class="row">
 	<div class="col-sm-10  col-sm-offset-1">
-		<a href="#/addStudent" class="btn btn-success"><span
-			class="glyphicon glyphicon-plus"></span> <b>Add Student</b></a> <select
-			ng-model="name" class="btn btn-default">
-			<option ng-value="">All Departments</option>
-			<option ng-repeat="department in departments">{{department.title}}</option>
+
+		<a href="#/students/form" class="btn btn-success"><span
+			class="glyphicon glyphicon-plus"></span> <b>Add&nbsp;Student</b></a> <select
+			data-ng-model="departmentId" class="btn btn-default">
+			<option data-ng-value="0">All&nbsp;Departments</option>
+			<option data-ng-repeat="department in departments"
+				data-ng-value="department.id">{{department.title}}</option>
 		</select>
-		<div class="table-responsive" ng-show="departments.length>0">
+
+		<div class="table-responsive">
 			<table class="table table-striped table-bordered">
 				<tr class="success">
 					<td>ID</td>
-					<td>NAME</td>
-					<td>FATHER NAME</td>
+					<td>FULL&nbsp;NAME</td>
+					<td>FATHER&nbsp;NAME</td>
 					<td>GENDER</td>
-					<td>YEAR OF STUDY</td>
-					<td>DATE OF BIRTHDAY</td>
+					<td>YEAR&nbsp;OF&nbsp;STUDY</td>
+					<td>DATE&nbsp;OF&nbsp;BIRTHDAY</td>
 					<td>ADDRESS</td>
 					<td>DEPARTMENTS</td>
-					<td>UPDATE</td>
+					<td>MANAGE</td>
+				</tr>
+				<tr data-ng-hide="students.length">
+					<td colspan="9" class="text-center">No&nbsp;Data</td>
 				</tr>
 				<tr
-					ng-repeat="student in students | filterDepartment:name | filter:searchText| orderBy:'yearOfStudy'">
+					data-ng-repeat="student in students | filterDepartment:departmentId | filter:{fullName:studentName}| orderBy:'yearOfStudy'">
 					<td>{{student.id}}</td>
-					<td>{{student.studentName | uppercase}}</td>
+					<td>{{student.fullName | uppercase}}</td>
 					<td>{{student.fatherName | uppercase}}</td>
 					<td>{{student.gender}}</td>
 					<td>{{student.yearOfStudy}}</td>
 					<td><my-date date="{{student.dateOfBirth}}"></my-date></td>
 					<td>{{student.address}}</td>
 					<td>{{student.department.title | uppercase }}</td>
-					<td><a href="#/findStudent/{{student.id}}"
-						class="btn btn-danger btn-sm"><span
-							class="glyphicon glyphicon-pencil"></span> <b>Edit</b></a> <a
-						href="#/deleteStudent/{{student.id}}"
-						class="btn btn-primary btn-sm"> <span
-							class="glyphicon glyphicon-remove"></span> <b>Delete</b>
-					</a></td>
+					<td><button data-ng-click="findStudentById(student.id)">
+							<span class="glyphicon glyphicon-pencil"></span>&nbsp;Edit
+						</button>
+						<button data-ng-click="deleteStudentById(student.id)">
+							<span class="glyphicon glyphicon-remove"></span>&nbsp;Delete
+						</button></td>
 				</tr>
 			</table>
 		</div>
 	</div>
 </div>
+
